--- a/www/index.html
+++ b/www/index.html
@@ -26,6 +26,8 @@
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src="js/services.js"></script>
+    <script src="js/service-util.js"></script>
+    <script src="js/service-map.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/constants.js"></script>
   </head>
