--- a/www/index.html
+++ b/www/index.html
@@ -27,13 +27,14 @@
     <script src="js/app.js"></script>
     <script src="js/services.js"></script>
     <script src="js/service-util.js"></script>
-    <script src="js/service-map.js"></script>
+    <!--script src="js/service-map.js"></script-->
     <script src="js/controllers.js"></script>
     <script src="js/constants.js"></script>
   </head>
   <body ng-app="collaApp" ng-controller="AppCtrl">
     <!-- The nav bar that will be updated as we navigate -->
     <ion-nav-view></ion-nav-view>
-    <script src="http://maps.google.com/maps/api/js?libraries=places&sensor=false&ver=4.0" type="text/javascript"></script>
+    <script src="http://maps.google.com/maps/api/js?libraries=places,weather,visualization,panoramio&sensor=false&ver=4.0" type="text/javascript"></script>
+    <script src="lib/ngmap/build/scripts/ng-map.min.js"></script>
   </body>
 </html>
