--- a/www/index.html
+++ b/www/index.html
@@ -13,9 +13,11 @@
 
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
+    <script src="lib/angular-underscore-module/underscore.js"></script>
     <script src="lib/angular-resource/angular-resource-1.3.13.js"></script>
     <script src="lib/angular-mocks/angular-mocks.js"></script>
     <script src="lib/ion-gallery/dist/ion.gallery.js"></script>
+    <script src="lib/angular-underscore-module/angular-underscore-module.js"></script>
     <!--script src="lib/qrcode-generator/js/qrcode.js"></script>
     <script src="lib/qrcode-generator/js/qrcode_UTF8.js"></script>
     <script src="lib/angular-qrcode/angular-qrcode.js"></script-->
@@ -27,7 +29,7 @@
     <script src="js/app.js"></script>
     <script src="js/services.js"></script>
     <script src="js/service-util.js"></script>
-    <!--script src="js/service-map.js"></script-->
+    <script src="js/service-map.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/constants.js"></script>
   </head>
@@ -36,5 +38,24 @@
     <ion-nav-view></ion-nav-view>
     <script src="http://maps.google.com/maps/api/js?libraries=places,weather,visualization,panoramio&sensor=false&ver=4.0" type="text/javascript"></script>
     <script src="lib/ngmap/build/scripts/ng-map.min.js"></script>
+    <script id="placeItemTmp" type="text/template">
+      <div class="place-window">
+        <div class="heading">
+          <img src="<%= imgPath %>" width="80" height="80" class="pull-left"/>
+          <h4><%= name %></h4>
+          <address><%= address %>, <%= zipcode%></address>
+          <div class="clearfix"></div>
+        </div>
+        <ul class="meta-data">
+          <li><span class="label label-success"><i class="glyphicon glyphicon-earphone"></i></span> <a href="tel:<%= phone%>"><%= phone%></a></li>
+          <!--li><span class="label label-default"><i class="glyphicon glyphicon-envelope"></i></span> <a href="mailto:<%= email%>"><%= email%></a></li-->
+          <li><span class="label label-primary"><i class="glyphicon glyphicon-globe"></i></span> <a href="<%= website%>" target="_blank"><%= website%></a></li>
+        </ul>
+        <div class="btn-group btn-group-justified" role="group" aria-label="...">
+          <a role="button" class="js-btn-direction btn btn-primary" href="#" title="<%= name %>">Direction</a>
+          <a role="button" class="js-btn-favourite btn btn-primary" href="#" title="<%= name %>">Favourite</a>
+        </div>
+      </div>
+    </script>
   </body>
 </html>
