--- a/www/index.html
+++ b/www/index.html
@@ -18,6 +18,7 @@
     <script src="lib/angular-mocks/angular-mocks.js"></script>
     <script src="lib/ion-gallery/dist/ion.gallery.js"></script>
     <script src="lib/angular-underscore-module/angular-underscore-module.js"></script>
+    <script src="lib/satellizer/satellizer.js"></script>
     <!--script src="lib/qrcode-generator/js/qrcode.js"></script>
     <script src="lib/qrcode-generator/js/qrcode_UTF8.js"></script>
     <script src="lib/angular-qrcode/angular-qrcode.js"></script-->
