--- a/www/index.html
+++ b/www/index.html
@@ -4,8 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <title>Ionic</title>
-
-    <link href="lib/ion-gallery/dist/ion-gallery.css" rel="stylesheet">
+    <!--link href="lib/ion-gallery/dist/ion-gallery.css" rel="stylesheet"-->
 
     <!-- compiled css output -->
     <link href="css/ionic.app.css" rel="stylesheet">
@@ -16,7 +15,7 @@
     <script src="lib/angular-underscore-module/underscore.js"></script>
     <script src="lib/angular-resource/angular-resource-1.3.13.js"></script>
     <script src="lib/angular-mocks/angular-mocks.js"></script>
-    <script src="lib/ion-gallery/dist/ion.gallery.js"></script>
+    <!--script src="lib/ion-gallery/dist/ion.gallery.js"></script-->
     <script src="lib/angular-underscore-module/angular-underscore-module.js"></script>
     <script src="lib/satellizer/satellizer.js"></script>
     <!--script src="lib/qrcode-generator/js/qrcode.js"></script>
