add owner template

--- a/www/index.html
+++ b/www/index.html
@@ -31,6 +31,7 @@
     <script src="js/service-util.js"></script>
     <script src="js/service-map.js"></script>
     <script src="js/controllers.js"></script>
+    <script src="js/filters.js"></script>
     <script src="js/constants.js"></script>
   </head>
   <body ng-app="collaApp" ng-controller="AppCtrl">
