--- a/www/index.html
+++ b/www/index.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="mobile-web-app-capable" content="yes">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <title>Ionic</title>
     <!--link href="lib/ion-gallery/dist/ion-gallery.css" rel="stylesheet"-->
@@ -22,8 +24,8 @@
     <script src="lib/qrcode-generator/js/qrcode_UTF8.js"></script>
     <script src="lib/angular-qrcode/angular-qrcode.js"></script-->
     <script src="lib/qrcodejs/qrcode.min.js"></script>
-    <!-- cordova script (this will be a 404 during development) -->
-    <script src="cordova.js"></script>
+    <!-- cordova script (this will be a 404 during development) >
+    <script src="cordova.js"></script-->
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
