--- a/www/index.html
+++ b/www/index.html
@@ -5,7 +5,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-    <title>Ionic</title>
+    <title>MySpa247</title>
     <!--link href="lib/ion-gallery/dist/ion-gallery.css" rel="stylesheet"-->
 
     <!-- compiled css output -->
@@ -14,6 +14,7 @@
 
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
+    <script src="lib/momentjs/min/moment.min.js"></script>
     <script src="lib/angular-underscore-module/underscore.js"></script>
     <script src="lib/angular-resource/angular-resource-1.3.13.js"></script>
     <script src="lib/angular-mocks/angular-mocks.js"></script>
